// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test LayerList should render correctly 1`] = `
<div>
  <div
    class="list"
    id="layerlist"
  >
    <div
      class="layer-item item locked"
      data-layer="layer2"
      data-testid="layer2"
      draggable="true"
    >
      <div
        class="drag-sensor-area"
        data-index="2"
      />
      <div
        class="row"
        data-layer="layer2"
      >
        <div
          class="color"
        >
          <div>
            MockColorPicker
            <p>
              disabled: 
              n
            </p>
            <p>
              initColor: 
              #000000
            </p>
            <p>
              triggerSize: 
              small
            </p>
            <p>
              printerColor: 
              n
            </p>
            <button
              type="button"
            >
              changeColor
            </button>
          </div>
        </div>
        <div
          class="module"
        >
          <svgr-url />
        </div>
        <div
          class="name"
          id="layerdoubleclick-1"
        >
          layer2
        </div>
        <div
          class="vis"
          id="layervis-1"
        >
          <svgr-url />
        </div>
        <div
          class="lock"
          id="layerlock-1"
        >
          <img
            alt="lock-icon"
            src="img/right-panel/icon-layerlock.svg"
          />
        </div>
      </div>
      <div
        class="drag-sensor-area"
        data-index="1"
      />
    </div>
    <div
      class="layer-item item selected"
      data-layer="layer1"
      data-testid="layer1"
      draggable="true"
    >
      <div
        class="drag-sensor-area"
        data-index="1"
      />
      <div
        class="row"
        data-layer="layer1"
      >
        <div
          class="color"
        >
          <div>
            MockColorPicker
            <p>
              disabled: 
              n
            </p>
            <p>
              initColor: 
              #ffffff
            </p>
            <p>
              triggerSize: 
              small
            </p>
            <p>
              printerColor: 
              n
            </p>
            <button
              type="button"
            >
              changeColor
            </button>
          </div>
        </div>
        <div
          class="module"
        >
          <svgr-url />
        </div>
        <div
          class="name"
          id="layerdoubleclick-0"
        >
          layer1
        </div>
        <div
          class="vis"
          id="layervis-0"
        >
          <svgr-url />
        </div>
        <div
          class="lock"
          id="layerlock-0"
        >
          <img
            alt="lock-icon"
            src="img/right-panel/icon-layerlock.svg"
          />
        </div>
      </div>
      <div
        class="drag-sensor-area"
        data-index="0"
      />
    </div>
  </div>
</div>
`;

exports[`test LayerList should render correctly on mobile 1`] = `
<div>
  <div
    class="list"
    id="layerlist"
  >
    <div
      class="adm-swipe-action"
    >
      <div
        class="adm-swipe-action-track"
        style="transform: none;"
      >
        <div
          class="adm-swipe-action-actions adm-swipe-action-actions-left"
        >
          <button
            class="adm-button adm-button-default adm-button-shape-default adm-swipe-action-action-button"
            style="--background-color: var(--adm-color-warning);"
            type="button"
          >
            <span>
              <svgr-url />
            </span>
          </button>
        </div>
        <div
          class="adm-swipe-action-content"
        >
          <div
            style="pointer-events: auto;"
          >
            <div
              class="layer-item item locked"
              data-layer="layer2"
              data-testid="layer2"
              draggable="true"
            >
              <div
                class="drag-sensor-area"
                data-index="2"
              />
              <div
                class="row"
                data-layer="layer2"
              >
                <div
                  class="color"
                >
                  <div>
                    MockColorPicker
                    <p>
                      disabled: 
                      n
                    </p>
                    <p>
                      initColor: 
                      #000000
                    </p>
                    <p>
                      triggerSize: 
                      small
                    </p>
                    <p>
                      printerColor: 
                      n
                    </p>
                    <button
                      type="button"
                    >
                      changeColor
                    </button>
                  </div>
                </div>
                <div
                  class="module"
                >
                  <svgr-url />
                </div>
                <div
                  class="name"
                  id="layerdoubleclick-1"
                >
                  layer2
                </div>
                <div
                  class="lock"
                  id="layerlock-1"
                >
                  <img
                    alt="lock-icon"
                    src="img/right-panel/icon-layerlock.svg"
                  />
                </div>
                <div
                  class="vis"
                  id="layervis-1"
                >
                  <svgr-url />
                </div>
                <div>
                  <svgr-url />
                </div>
              </div>
              <div
                class="drag-sensor-area"
                data-index="1"
              />
            </div>
          </div>
        </div>
        <div
          class="adm-swipe-action-actions adm-swipe-action-actions-right"
        >
          <button
            class="adm-button adm-button-default adm-button-shape-default adm-swipe-action-action-button"
            style="--background-color: var(--adm-color-danger);"
            type="button"
          >
            <span>
              <svgr-url />
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="adm-swipe-action"
    >
      <div
        class="adm-swipe-action-track"
        style="transform: none;"
      >
        <div
          class="adm-swipe-action-actions adm-swipe-action-actions-left"
        >
          <button
            class="adm-button adm-button-default adm-button-shape-default adm-swipe-action-action-button"
            style="--background-color: var(--adm-color-warning);"
            type="button"
          >
            <span>
              <svgr-url />
            </span>
          </button>
        </div>
        <div
          class="adm-swipe-action-content"
        >
          <div
            style="pointer-events: auto;"
          >
            <div
              class="layer-item item selected"
              data-layer="layer1"
              data-testid="layer1"
              draggable="true"
            >
              <div
                class="drag-sensor-area"
                data-index="1"
              />
              <div
                class="row"
                data-layer="layer1"
              >
                <div
                  class="color"
                >
                  <div>
                    MockColorPicker
                    <p>
                      disabled: 
                      n
                    </p>
                    <p>
                      initColor: 
                      #ffffff
                    </p>
                    <p>
                      triggerSize: 
                      small
                    </p>
                    <p>
                      printerColor: 
                      n
                    </p>
                    <button
                      type="button"
                    >
                      changeColor
                    </button>
                  </div>
                </div>
                <div
                  class="module"
                >
                  <svgr-url />
                </div>
                <div
                  class="name"
                  id="layerdoubleclick-0"
                >
                  layer1
                </div>
                <div
                  class="lock"
                  id="layerlock-0"
                >
                  <img
                    alt="lock-icon"
                    src="img/right-panel/icon-layerlock.svg"
                  />
                </div>
                <div
                  class="vis"
                  id="layervis-0"
                >
                  <svgr-url />
                </div>
                <div>
                  <svgr-url />
                </div>
              </div>
              <div
                class="drag-sensor-area"
                data-index="0"
              />
            </div>
          </div>
        </div>
        <div
          class="adm-swipe-action-actions adm-swipe-action-actions-right"
        >
          <button
            class="adm-button adm-button-default adm-button-shape-default adm-swipe-action-action-button"
            style="--background-color: var(--adm-color-danger);"
            type="button"
          >
            <span>
              <svgr-url />
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
